[package]
name = "lau-robotics"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-robotics"
description = "Robotics fundamentals — kinematics, dynamics, and path planning for agents with spatial awareness"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[lib]
name = "lau_robotics"
path = "src/lib.rs"
